RESOLVED FIXED53725
AX: can't set accessibility overridden attributes on web objects
https://bugs.webkit.org/show_bug.cgi?id=53725
Summary AX: can't set accessibility overridden attributes on web objects
chris fleizach
Reported 2011-02-03 15:22:39 PST
Right now, it's not possible to use accessibilitySetOveriddenAttribute on the AX web objects created, since they are custom elements. We need to override the right method to allow this
Attachments
Patch (1.63 KB, patch)
2011-02-03 15:30 PST, chris fleizach
darin: review+
chris fleizach
Comment 1 2011-02-03 15:30:46 PST
chris fleizach
Comment 2 2011-02-04 10:48:13 PST
WebKit Review Bot
Comment 3 2011-02-04 11:43:08 PST
http://trac.webkit.org/changeset/77645 might have broken Leopard Intel Release (Tests) The following tests are not passing: platform/mac/fast/AppleScript/date.html
Note You need to log in before you can comment on or make changes to this bug.