AX: Can't set accessibility overridden attributes on web objects https://bugs.webkit.org/show_bug.cgi?id=53725

Reviewed by Darin Adler.

accessibilitySetOverriddenValue does not work on AX objects from WebCore because
the right method needed to be overridden (accessibilitySupportsOverriddenAttributes).
Unfortunately, there's no way to test this from DRT, since AppKit returns the overridden
attribute only when an AX client asks for it through the AX frameworks.

* accessibility/mac/AccessibilityObjectWrapper.mm:
(-[AccessibilityObjectWrapper accessibilitySupportsOverriddenAttributes]):



Canonical link: https://commits.webkit.org/67716@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@77645 268f45cc-cd09-0410-ab3c-d52691b4dbfc